# cmd-center

./: .gitignore  Main.hs  README.md  cmd-center.cabal
test/: audio-controls.sh  audio.sh
